--- a/src/index.css
+++ b/src/index.css
@@ -49,6 +49,13 @@
   background: -webkit-linear-gradient(-90.13deg, #00cea8 1.9%, #bf61ff 97.5%);
 }
 
+.blue-yellow-gradient {
+  background: "#00cea8";
+  background: linear-gradient(90.13deg, #facc15 1.9%, #010e13 97.5%);
+  background: -webkit-linear-gradient(-90.13deg, #fbbe21 20%, #032d3e 80%);
+}
+
+
 .orange-text-gradient {
   background: #f12711; /* fallback for old browsers */
   background: -webkit-linear-gradient(
